--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 dist: bionic
 language: ruby
 rvm: 2.7
+jobs:
+  include:
+    - rvm: 2.7
+      gemfile: Gemfile
+    - rvm: 2.6
+      gemfile: test/gemfiles/rails52.gemfile
+    - rvm: 2.5
+      gemfile: test/gemfiles/rails51.gemfile
+    - rvm: 2.4
+      gemfile: test/gemfiles/rails50.gemfile
 script: bundle exec rake test
 notifications:
   email:
