--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
           - ruby: 3.2
             gemfile: Gemfile
           - ruby: 3.1
-            gemfile: Gemfile
+            gemfile: gemfiles/rails70.gemfile
           - ruby: "3.0"
             gemfile: gemfiles/rails61.gemfile
     env:
